Dependencies/Developers/Source/MediaInfoDLL/MediaInfoDLL.h

    typedef void* (__stdcall *MEDIAINFOLIST_New)();
    static MEDIAINFOLIST_New MediaInfoList_New;
    typedef void (__stdcall *MEDIAINFOLIST_Delete)(void*);
    static MEDIAINFOLIST_Delete MediaInfoList_Delete;
    typedef size_t (__stdcall *MEDIAINFOLIST_Open)(void*, const MediaInfo_Char*, const MediaInfo_fileoptions_C);
    static MEDIAINFOLIST_Open MediaInfoList_Open;
    typedef void (__stdcall *MEDIAINFOLIST_Close)(void*, size_t);
    static MEDIAINFOLIST_Close MediaInfoList_Close;
    typedef const MediaInfo_Char* (__stdcall *MEDIAINFOLIST_Inform)(void*, size_t, size_t Reserved);
    static MEDIAINFOLIST_Inform MediaInfoList_Inform;
    typedef const MediaInfo_Char* (__stdcall *MEDIAINFOLIST_GetI)(void*, size_t, MediaInfo_stream_C StreamKind, size_t StreamNumber, size_t Parameter, MediaInfo_info_C KindOfInfo);
    static MEDIAINFOLIST_GetI MediaInfoList_GetI;
    typedef const MediaInfo_Char* (__stdcall *MEDIAINFOLIST_Get)(void*, size_t, MediaInfo_stream_C StreamKind, size_t StreamNumber, const MediaInfo_Char* Parameter, MediaInfo_info_C KindOfInfo, MediaInfo_info_C KindOfSearch);
    static MEDIAINFOLIST_Get MediaInfoList_Get;
    typedef const MediaInfo_Char* (__stdcall *MEDIAINFOLIST_Option)(void*, const MediaInfo_Char* Parameter, const MediaInfo_Char* Value);
    static MEDIAINFOLIST_Option MediaInfoList_Option;
    typedef size_t (__stdcall *MEDIAINFOLIST_State_Get)(void*);
    static MEDIAINFOLIST_State_Get MediaInfoList_State_Get;
    typedef size_t (__stdcall *MEDIAINFOLIST_Count_Get)(void*, size_t, MediaInfo_stream_C StreamKind, size_t StreamNumber);
    static MEDIAINFOLIST_Count_Get MediaInfoList_Count_Get;